--- a/client/src/components/layout/CartSidebar.css
+++ b/client/src/components/layout/CartSidebar.css
@@ -40,7 +40,7 @@
   margin-bottom: 20px;
   padding-bottom: 15px;
   border-bottom: 1px solid var(--border);
-    border: 3px solid;
+  border: 3px solid;
 }
 
 .cart-item img {
@@ -89,6 +89,14 @@
 .item-details h4 {
   color: var(--sidebar-text);
   margin: 0 0 5px 0;
+}
+
+/* Fix the Item Details alignment */
+.item-details {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .item-details p {
